--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 python-lzma (0.5.2-1) experimental; urgency=low
 
-  * Initial release
+  * Initial release (Closes: #556451)
 
  -- Richard Darst <rkd@zgib.net>  Sun, 15 Nov 2009 17:01:44 -0500
