Upload is to experimental
git-svn-id: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk@10634 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-lzma (0.5.2-2) unstable; urgency=low
+python-lzma (0.5.2-2) experimental; urgency=low
 
   * Fix duplicate "Maintainer: " text in that field in debian/control.
   * Include the backwards-compatibility "liblzma.py" module.  This just
