python-lzma: new upstream version + deb3.0
git-svn-id: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk@12652 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-lzma (0.5.3-1) unstable; urgency=low
+
+  * New upstream version
+  * Upgrade to 3.0 (quilt) just to be able to use .orig.tar.bz2
+
+ -- Richard Darst <rkd@zgib.net>  Mon, 19 Apr 2010 13:52:06 -0400
+
 python-lzma (0.5.2-3) unstable; urgency=low
 
   * Rebuild against unstable as python2.6 has migrated to there.
