--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ python-lzma (0.5.3-1) unstable; urgency=low
 
   * New upstream version
   * Upgrade to 3.0 (quilt) just to be able to use .orig.tar.bz2
+  * Bump standards-version to 3.8.4
 
- -- Richard Darst <rkd@zgib.net>  Mon, 19 Apr 2010 13:52:06 -0400
+ -- Richard Darst <rkd@zgib.net>  Mon, 19 Apr 2010 14:16:48 -0400
 
 python-lzma (0.5.2-3) unstable; urgency=low
 
