Fix duplicate changelog bug, also bump standards-version
git-svn-id: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk@14318 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-lzma (0.5.3-2) unstable; urgency=low
+
+  * Remove duplicated /u/s/d/{changelog,Changelog}.gz (Closes: #594943)
+
+ -- Richard Darst <rkd@zgib.net>  Mon, 30 Aug 2010 21:55:54 -0400
+
 python-lzma (0.5.3-1) unstable; urgency=low
 
   * New upstream version
