Add unreleased -3 to svn
git-svn-id: svn://anonscm.debian.org/python-modules/packages/python-lzma/trunk@17673 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-lzma (0.5.3-3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Richard Darst <rkd@zgib.net>  Wed, 29 Jun 2011 01:13:41 -0400
+
 python-lzma (0.5.3-2) unstable; urgency=low
 
   * Remove duplicated /u/s/d/{changelog,Changelog}.gz (Closes: #594943)
