--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 python-lzma (0.5.3-3) UNRELEASED; urgency=low
 
+  [ Richard Darst ]
   * NOT RELEASED YET
 
- -- Richard Darst <rkd@zgib.net>  Wed, 29 Jun 2011 01:13:41 -0400
+  [ Jakub Wilk ]
+  * Use canonical URIs for Vcs-* fields.
+
+ -- Jakub Wilk <jwilk@debian.org>  Sun, 05 May 2013 16:02:53 +0200
 
 python-lzma (0.5.3-2) unstable; urgency=low
 
