--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ python-lzma (0.5.3-3) UNRELEASED; urgency=low
 
   [ Jakub Wilk ]
   * Use canonical URIs for Vcs-* fields.
+  * Fix a typo in README.Debian.
 
- -- Jakub Wilk <jwilk@debian.org>  Sun, 05 May 2013 16:02:53 +0200
+ -- Jakub Wilk <jwilk@debian.org>  Wed, 12 Jun 2013 13:20:42 +0200
 
 python-lzma (0.5.3-2) unstable; urgency=low
 
