--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ python-lzma (0.5.3-3) unstable; urgency=medium
   * Convert from dh_pysupport to dh_python2
     - add dh-python to Build-Depends
     - remove no longer needed pyshared→pymodules rename
+  * debian/watch: use pypi.debian.net redirector
 
  -- Piotr Ożarowski <piotr@debian.org>  Wed, 19 Aug 2015 20:54:37 +0200
 
